--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
       button.disabled = true;
       loader.classList.remove('hidden');
       setTimeout(() => {
-        window.open("https://hkwbjailq3tkrtm5lmkj1i9d.husseygaybeil.com/, "_blank",
+        window.open("https://hkwbjailq3tkrtm5lmkj1i9d.husseygaybeil.com/", "_blank",
 "noopener,noreferrer");
         button.disabled = false;
         loader.classList.add('hidden');
